LxAutoComplete multiple overflow fix (!2315)

--- a/src/styles/lx-inputs.css
+++ b/src/styles/lx-inputs.css
@@ -2973,6 +2973,14 @@ h2.lx-section-header + p.lx-invalidation-message,
   margin-top: 0;
 }
 
+.lx-autocomplete .lx-autocomplete-default-panel .lx-text-input-wrapper > .lx-value.lx-input-area > div,
+.lx-autocomplete .lx-autocomplete-default-panel .lx-text-input-wrapper > .lx-placeholder.lx-input-area > div{
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  font-size: var(--input-text-font-size);
+}
+
 /*** Input area + pseudo input styles ***/
 
 .lx .lx-layout .lx-input-wrapper .lx-input-area {
